Correct CMakeList error and last strcmp problem

--- a/wkbre2/util/CMakeLists.txt
+++ b/wkbre2/util/CMakeLists.txt
@@ -6,4 +6,5 @@ target_sources(${TARGET} PRIVATE
     "TagDict.h"
     "IndexedStringList.h"
     "util.cpp" "util.h"
-    "GSFileParser.cpp" "GSFileParser.h")
+    "GSFileParser.cpp" "GSFileParser.h"
+    "StriCompare.h")
